--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dependencies": {
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "express-validator": "^6.14.1",
+        "jsonwebtoken": "^8.5.1",
+        "knex": "^2.0.0",
+        "knex-paginate": "^3.0.1",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
