--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-validator": "^6.14.1",
         "jsonwebtoken": "^8.5.1",
         "knex": "^2.0.0",
         "knex-paginate": "^3.0.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "pg": "^8.7.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.16"
